crates/aranya-policy-lang/tests/data/invalid_substruct.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
Syntax error: line 1 column 21:  --> 1:21
  |
1 | let x = y substruct 4
  |                     ^---
  |
  = expected identifier
